--- a/config.sample.toml
+++ b/config.sample.toml
@@ -25,4 +25,5 @@
 # Find the params of openai.OpenAI.chat.completions.create(...) from https://github.com/openai/openai-python
 
 # OpenAI model to use
-model = "gpt-3.5-turbo"
+model = "gpt-4-1106-preview"
+
